<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="http://schemas.android.com/apk/res-auto" tools:ignore="MissingTranslation">

    <!-- App -->
    <string name="app_keep">Keep</string>
    <string name="app_history">History</string>

    <!-- Nav -->
    <string name="nav_home">Home</string>
    <string name="nav_keep">Favorite</string>
    <string name="nav_vod">Video</string>
    <string name="nav_live">Live</string>
    <string name="nav_setting">Setting</string>

    <!-- Vod -->
    <string name="vod_home">Home</string>

    <!-- Detail -->
    <string name="detail_flag">Flag</string>
    <string name="detail_more">More</string>
    <string name="detail_episode">Episode</string>
    <string name="detail_quality">Quality</string>
    <string name="detail_content">Summary</string>
    <string name="detail_search">Searching <xliff:g name="name">%s</xliff:g></string>

    <!-- Device -->
    <string name="device_select">Select devices</string>
    <string name="device_offline">Device is offline</string>
    <string name="device_scan">Please scan QR Code to bind</string>

    <!-- Control -->
    <string name="control_speed">Speed</string>
    <string name="control_scale">Scale</string>
    <string name="control_track">Track</string>
    <string name="control_other">Other</string>

    <!-- Dialog -->
    <string name="dialog_delete_record">Delete all records?</string>
    <string name="dialog_delete_keep">All keep records will be removed.</string>
    <string name="dialog_delete_history">All history records will be removed.</string>

    <!-- Timer -->
    <string name="timer_5">5 minutes</string>
    <string name="timer_15">15 minutes</string>
    <string name="timer_30">30 minutes</string>
    <string name="timer_60">1 hour</string>
    <string name="timer_120">2 hours</string>
    <string name="timer_180">3 hours</string>
    <string name="timer_delay">Add 15 minutes</string>
    <string name="timer_cancel">Cancel timer</string>

    <!-- Hint -->
    <string name="shortcut">Shortcut has been added.</string>

    <string-array name="select_background">
        <item>Off</item>
        <item>On</item>
        <item>PiP</item>
    </string-array>

</resources>