<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/play_timer"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/time1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_accent_no_border"
            android:tag="5"
            android:text="@string/timer_5"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_accent_no_border"
            android:tag="15"
            android:text="@string/timer_15"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_accent_no_border"
            android:tag="30"
            android:text="@string/timer_30"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time4"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_accent_no_border"
            android:tag="60"
            android:text="@string/timer_60"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time5"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_accent_no_border"
            android:tag="120"
            android:text="@string/timer_120"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/time6"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_accent_no_border"
            android:tag="180"
            android:text="@string/timer_180"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:text="5:00" />

        <TextView
            android:id="@+id/delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_timer_delay_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:text="@string/timer_delay"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_timer_reset_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:singleLine="true"
            android:text="@string/timer_cancel"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>